# kinic-dashboard

./: .gitignore  Cargo.toml  MANIFEST.in  README.md  dfx.json  project.toml  pyproject.toml
docs/: cli.md  ii-login-architecture.md
python/examples/: ask_ai.py  colbert.py  insert_pdf_file.py  memories_demo.py
python/kinic_py/: __init__.py  memories.py
rust/: agent.rs  cli.rs  cli_defs.rs  embedding.rs  identity_store.rs  ledger.rs  lib.rs  main.rs  python.rs
rust/clients/: launcher.rs  memory.rs  mod.rs
rust/commands/: ask_ai.rs  balance.rs  config.rs  convert_pdf.rs  create.rs  ii_login_page.html  insert_pdf.rs  insert_raw.rs  list.rs  login.rs  mod.rs  reset.rs  search.rs  search_raw.rs  tagged_embeddings.rs  update.rs
rust/commands/ii_login/: crypto.rs  http.rs  mod.rs  payload.rs
scripts/: mint.sh  setup.sh
src/: agent.rs  cli.rs  lib.rs
src/clients/: launcher.rs  mod.rs
src/commands/: create.rs  greet.rs  insert.rs  list.rs  mod.rs
web/: .env.local  package-lock.json  package.json  pnpm-lock.yaml
web/src/app/: layout.tsx  page.tsx
web/src/app/api/chat/: route.ts
web/src/app/cli-login/: page.tsx
web/src/app/insert/: page.tsx
web/src/app/memories/: page.tsx
web/src/app/memories/[id]/: page.tsx
web/src/app/memories/add/: page.tsx
web/src/app/search/: page.tsx
web/src/app/settings/: page.tsx
web/src/components/dashboard/: dashboard-shell.tsx
web/src/components/layout/: app-shell.tsx
web/src/components/memories/: memories-panel.tsx
web/src/components/providers/: balance-provider.tsx  identity-provider.tsx  memories-provider.tsx
web/src/components/search/: search-history.tsx  search-results.tsx
web/src/components/shadcn-studio/blocks/: datatable-transaction.tsx  dropdown-profile.tsx
web/src/components/ui/: multi-select-combobox-input.tsx  select.tsx  sidebar.tsx
web/src/data/: dashboard-nav.tsx  dashboard-transactions.ts
web/src/hooks/: use-canister-status.ts  use-identity.ts  use-ledger-balance.ts  use-memories.ts  use-mounted.ts  use-pagination.ts  use-selected-memory.ts
web/src/lib/: embedding.ts  ic-config.ts  launcher.ts  ledger.ts  management.ts  memory.ts  pdf.ts  search-utils.ts  wallets.ts
web/src/types/: oisy-wallet-signer.d.ts  plug.d.ts
